vlib/v/checker/tests/chained_alias_cycle_err.vv
type Alpha = Beta
type Beta = Alpha

fn main() {
}
